fix found layout issue

--- a/src/main/webapp/resources/sass/partials/savie/_applicant-info.scss
+++ b/src/main/webapp/resources/sass/partials/savie/_applicant-info.scss
@@ -39,7 +39,7 @@
 	
 	.form-control.gray-textbox {
 		font-size: 14px;
-		margin-bottom: 0;
+		//margin-bottom: 0;
 		color: #000;
 		padding: 12px 15px 0 15px;
 	}
